Test stream processing refactored